# Jarvis

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: default.toml
docs/: linux-setup.md  migration.md  roadmap.md
evals/: cases.json  run.py
scripts/: dev.sh  install-linux.sh  install-macos.sh
src/jarvis/: __init__.py  __main__.py  app.py  logging_setup.py  memory.py  net.py  settings.py
src/jarvis/pipeline/: __init__.py  asr.py  audio_io.py  brain.py  hotkey.py  tts.py  voice_loop.py
src/jarvis/platform_adapter/: __init__.py  base.py  linux.py  macos.py
src/jarvis/tools/: __init__.py  info.py  registry.py  system.py
systemd/: jarvis.service
tests/: test_app_slash.py  test_asr.py  test_audio_io.py  test_brain_stream.py  test_evals_harness.py  test_hotkey.py  test_info_tools.py  test_linux_adapter.py  test_memory.py  test_tts.py  test_voice_loop.py
