[project]
name = "jarvis"
version = "0.0.1"
description = "Personal Jarvis-style voice assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
    "httpx[socks]>=0.27",
    "openai>=1.40",
    "prompt-toolkit>=3.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
audio = [
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "webrtcvad-wheels>=2.0",
]
asr = [
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "webrtcvad-wheels>=2.0",
    "faster-whisper>=1.0",
]
tts = [
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "piper-tts>=1.2; sys_platform != 'darwin'",
]
wake = [
    "openwakeword>=0.6",
]
linux = [
    "dbus-next>=0.2",
    "evdev>=1.7",
]
darwin = [
    "pynput>=1.7",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
jarvis = "jarvis.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
